Removed padding to fix spacing issue in IE

--- a/css/ecommerce.less
+++ b/css/ecommerce.less
@@ -121,7 +121,8 @@ a.btn.ecom-product-go-to-checkout-btn {
 		height: 40px;
 		margin-bottom: 12px;
         line-height: 1;
-	    padding: 0 33px 0 8px;
+        min-width: 165px;
+	    padding: 0 0 0 8px;
 	    border: 1px solid @color-swatch3;
 	    background-color: @color-swatch1;
 	    color: @color-swatch5;
@@ -731,7 +732,8 @@ a.btn.ecom-product-go-to-checkout-btn {
     	height: 40px;
         line-height: 1;
     	margin-bottom: 12px;
-        padding: 0 33px 0 8px;
+        min-width: 165px;
+        padding: 0 0 0 8px;
         border: 1px solid darken(@color-swatch1,10%);
         background-color: darken(@color-swatch1,4%);
         color: @color-swatch5;
