--- a/css/widgets.less
+++ b/css/widgets.less
@@ -139,7 +139,7 @@ textarea,
     height: 40px;
     line-height: 1;
     margin: 10px 0 20px;
-    padding: 0 33px 0 8px;
+    padding: 0 0 0 8px;
     border: 1px solid darken(@color-swatch1,10%);
     background-color: darken(@color-swatch1,4%);
     color: @color-swatch5;
